--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ html,body{
 
 body{
     background-color: #1a1a1a;
+    color: white;
 }
 
 
@@ -27,9 +28,11 @@ main{
     width: 100%;
     display: flex;
     flex-direction: column;
+
+    
     
 
-    section{
+    .view1 {
         width: 100%;
     @include flex-colum(0.6rem);
     padding: 1rem;
@@ -93,12 +96,197 @@ main{
 
     }
     }
+
+    .view2{
+
+        gap: 1rem;
+
+        display: flex;
+        justify-content: space-around;
+
+       .top{
+        display: flex;
+        
+        
+        justify-content: space-around;
+
+        gap: 4rem;
+        
+        
+
+        
+
+       .client{
+
+        padding: 1rem;
+         p{
+                font-size: 1rem;
+            }
+
+            display: flex;
+            flex-direction: column;
+            
+            h1{
+                font-weight: 100;
+                font-size: 3rem;
+            }
+
+       }
+
+           
+        
+        
+       
+
+        
+    }
+
+    
 }
 
+.view3 {
+        width: 100%;
+    @include flex-colum(0.6rem);
+    padding: 1rem;
+    
+    
+
+
+    .top{
+
+        width: 100%;
+        img{
+
+            width: 100%;
+            border-radius: 0.7rem;
+        }
+    }
+
+    .bottom{
+        width: 100%;
+        background-color: #272727;
+        padding: 1.6rem;
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       
+       gap: 8rem;
+       border-radius: 0.7rem;
+
+       p{
+        color: white;
+
+       }
+
+       .text{
+
+        @include flex-colum(1rem);
+    
+
+        
+        h1{
+            color: white;
+            font-weight: 300;
+            text-transform: uppercase;
+            
+        }
+        p{
+            font-size: 1.3rem;
+            font-weight: 100;
+            opacity: 0.6;
+            line-height: 1.5;
+
+        }
+
+       }
+      
+
+    }
+    }
+
+    .view4{
+
+        width: 100%;
+        padding: 1rem;
+        @include flex-colum(1rem);
+      
+
+        .card{
+
+         display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        
+        border-radius: 0.7rem;
+        justify-content: space-between;
+
+        background-image: url(./card1.webp);
+        aspect-ratio: 1/1;
+        background-size: cover;
+        padding: 1rem;
+
+        .icon,.bottom{
+            background-color: #52525290;
+            backdrop-filter: blur(10px);
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+        }
+
+        .top{
+            display: flex;
+            justify-content: flex-end;
+            gap: 0.6rem;
+            align-items: center;
+
+            .icon{
+
+                
+                    width: fit-content;
+                    border-radius: 50%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  
+                
+        
+            }
+            
+
+            
+            
+        }
+
+        .bottom{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            padding: 1rem 1rem;
+            h1{
+                font-size: 1.5rem;
+                font-weight: 500;
+            }
+        }
+        }
+        
+
+    }
+
+   
+}
+
+
+
 @media (min-width:900px){
+
+     .view1{
+        max-width: 1600px;
+    }
     main{
 
-        section{
+        display: flex;
+        align-items: center;
+        .view1{
 
             flex-direction: row;
             padding: 2rem 3rem;
@@ -113,5 +301,86 @@ main{
                 justify-content: space-between;
             }
         }
+
+        .view2{
+                  
+           .top{
+
+            display: flex;
+            gap: 7rem;
+            .client{
+
+                p{
+                    font-size: 1.2rem;
+                }
+
+                h1{
+                    font-size: 3rem;
+                    font-weight: 400;
+                }
+            }
+            .left{
+                display: flex;
+                justify-content: space-between;
+                flex-direction: row;
+                gap: 10rem;
+
+            }
+           
+            .right{
+                display: flex;
+                justify-content: space-between;
+                gap: 10rem;
+                flex-direction: row;
+                
+
+            }
+
+
+           }
+
+            
+            
+        }
+
+        .view3{
+
+            display: flex;
+            flex-direction: row-reverse;
+
+            .text{
+
+                display: flex;
+                flex-direction: column;
+
+                
+                .para{
+
+                    display: flex;
+                    gap: 1rem;
+                    line-height: 1rem;
+                }
+            }
+        }
+
+
+        .view4{
+
+            
+            flex-direction: row;  
+            align-items: center; 
+            justify-content: center; 
+            padding: 1rem 4rem;
+            .card{
+                width: 40%;
+                aspect-ratio: 1/1;
+            }
+            
+        }
     }
+
+
+    
+
+
 }
