--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body {
 
 body {
   background-color: #1a1a1a;
+  color: white;
 }
 
 main {
@@ -19,21 +20,21 @@ main {
   display: flex;
   flex-direction: column;
 }
-main section {
+main .view1 {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.6rem;
   padding: 1rem;
 }
-main section .top {
+main .view1 .top {
   width: 100%;
 }
-main section .top img {
+main .view1 .top img {
   width: 100%;
   border-radius: 0.7rem;
 }
-main section .bottom {
+main .view1 .bottom {
   width: 100%;
   background-color: #272727;
   padding: 1rem;
@@ -42,26 +43,26 @@ main section .bottom {
   gap: 8rem;
   border-radius: 0.7rem;
 }
-main section .bottom p {
+main .view1 .bottom p {
   color: white;
 }
-main section .bottom .text {
+main .view1 .bottom .text {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-main section .bottom .text h1 {
+main .view1 .bottom .text h1 {
   color: white;
   font-weight: 300;
   text-transform: uppercase;
 }
-main section .bottom .text p {
+main .view1 .bottom .text p {
   font-size: 1.3rem;
   font-weight: 100;
   opacity: 0.6;
   line-height: 1.5;
 }
-main section .bottom button {
+main .view1 .bottom button {
   width: -moz-fit-content;
   width: fit-content;
   padding: 0.4rem 0.9rem;
@@ -69,17 +70,184 @@ main section .bottom button {
   outline: none;
   border-radius: 0.5rem;
 }
+main .view2 {
+  gap: 1rem;
+  display: flex;
+  justify-content: space-around;
+}
+main .view2 .top {
+  display: flex;
+  justify-content: space-around;
+  gap: 4rem;
+}
+main .view2 .top .client {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+main .view2 .top .client p {
+  font-size: 1rem;
+}
+main .view2 .top .client h1 {
+  font-weight: 100;
+  font-size: 3rem;
+}
+main .view3 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+  padding: 1rem;
+}
+main .view3 .top {
+  width: 100%;
+}
+main .view3 .top img {
+  width: 100%;
+  border-radius: 0.7rem;
+}
+main .view3 .bottom {
+  width: 100%;
+  background-color: #272727;
+  padding: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8rem;
+  border-radius: 0.7rem;
+}
+main .view3 .bottom p {
+  color: white;
+}
+main .view3 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main .view3 .bottom .text h1 {
+  color: white;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+main .view3 .bottom .text p {
+  font-size: 1.3rem;
+  font-weight: 100;
+  opacity: 0.6;
+  line-height: 1.5;
+}
+main .view4 {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main .view4 .card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  border-radius: 0.7rem;
+  justify-content: space-between;
+  background-image: url(./card1.webp);
+  aspect-ratio: 1/1;
+  background-size: cover;
+  padding: 1rem;
+}
+main .view4 .card .icon, main .view4 .card .bottom {
+  background-color: rgba(82, 82, 82, 0.5647058824);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+main .view4 .card .top {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.6rem;
+  align-items: center;
+}
+main .view4 .card .top .icon {
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .view4 .card .bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1rem;
+}
+main .view4 .card .bottom h1 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
 
 @media (min-width: 900px) {
-  main section {
+  .view1 {
+    max-width: 1600px;
+  }
+  main {
+    display: flex;
+    align-items: center;
+  }
+  main .view1 {
     flex-direction: row;
     padding: 2rem 3rem;
     justify-content: center;
   }
-  main section .top, main section .bottom {
+  main .view1 .top, main .view1 .bottom {
     width: 50%;
   }
-  main section .bottom {
+  main .view1 .bottom {
     justify-content: space-between;
+  }
+  main .view2 .top {
+    display: flex;
+    gap: 7rem;
+  }
+  main .view2 .top .client p {
+    font-size: 1.2rem;
+  }
+  main .view2 .top .client h1 {
+    font-size: 3rem;
+    font-weight: 400;
+  }
+  main .view2 .top .left {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 10rem;
+  }
+  main .view2 .top .right {
+    display: flex;
+    justify-content: space-between;
+    gap: 10rem;
+    flex-direction: row;
+  }
+  main .view3 {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  main .view3 .text {
+    display: flex;
+    flex-direction: column;
+  }
+  main .view3 .text .para {
+    display: flex;
+    gap: 1rem;
+    line-height: 1rem;
+  }
+  main .view4 {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 4rem;
+  }
+  main .view4 .card {
+    width: 40%;
+    aspect-ratio: 1/1;
   }
 }/*# sourceMappingURL=style.css.map */
